# ArchGemini666

./: .gitignore  ArchGemini - 本地建筑效果图生成与修改工具 (1).md  PROJECT_MAP.md  SERVER_DEPLOYMENT.md  TECHNICAL_DOCS_v0.1.md  一键启动.bat
arch-gemini/: .gitignore  README.md  run_backend.bat  setup.bat  start.bat
arch-gemini/backend/: README.md  analysis_prompts.py  app.py  debug_key.py  debug_params.py  debug_qwen.py  error_prompts.py  history.db  prompts.py  pyproject.toml  test_connection.py
arch-gemini/backend/core/: config.py  http_client.py  logger.py
arch-gemini/backend/services/: gemini_gen.py  gemini_vision.py  qwen_service.py
arch-gemini/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
arch-gemini/frontend/electron/: main.js
arch-gemini/frontend/src/: app.jsx  config.js
arch-gemini/frontend/src/components/: HistorySidebar.jsx  ImageAnalyzer.jsx  ImageGenerator.jsx  ImageUploader.jsx  PromptOptimizer.jsx
arch-gemini/frontend/src/utils/: historyDb.js
